--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -28,19 +28,25 @@
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:adjustViewBounds="false"
+        android:scaleType="centerCrop"
+        app:civ_border_width="2dp"
+        app:civ_circle_background_color="#000"
+        app:layout_constraintCircleRadius="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_account_circle_black_24dp" />
+        app:srcCompat="@drawable/images"
+        android:elevation="4dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
@@ -129,6 +135,17 @@
             app:fab_colorNormal="#FF0000"
             app:fab_colorPressed="#FF0000"
             fab:fab_label="Excluir"
+            fab:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_item_foto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="adicionarFoto"
+            android:src="@drawable/ic_photo_camera_white_24dp"
+            app:fab_colorNormal="#00BCD4"
+            app:fab_colorPressed="#FF00BCD4"
+            fab:fab_label="Foto"
             fab:fab_size="mini" />
 
     </com.github.clans.fab.FloatingActionMenu>
