--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.CadastroActivity">
+    tools:context=".activity.CadastroActivity"
+    android:focusableInTouchMode="true"
+    android:focusedByDefault="true">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout4"
@@ -24,7 +26,10 @@
             android:id="@+id/editNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawablePadding="3dp"
             android:hint="Nome"
+            android:paddingLeft="4dp"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -39,7 +44,6 @@
         android:layout_marginRight="16dp"
         android:adjustViewBounds="false"
         android:scaleType="centerCrop"
-        app:civ_border_width="2dp"
         app:civ_circle_background_color="#000"
         app:layout_constraintCircleRadius="100dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,12 +65,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.santalu.maskedittext.MaskEditText
             android:id="@+id/editTelefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
+            android:drawablePadding="3dp"
             android:hint="Numero de telefone"
-            android:inputType="number|phone" />
+            android:inputType="phone"
+            android:paddingLeft="4dp"
+            app:met_mask="(##) ##### ####" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.github.clans.fab.FloatingActionMenu
