--- a/app/src/main/res/layout/model_recycler_contato.xml
+++ b/app/src/main/res/layout/model_recycler_contato.xml
@@ -43,13 +43,16 @@
                 android:text="TextView"
                 android:textSize="18sp" />
 
-            <TextView
+            <com.santalu.maskedittext.MaskEditText
                 android:id="@+id/tNumero"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
+                android:background="@android:color/transparent"
+                android:focusableInTouchMode="false"
                 android:text="TextView"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:met_mask="(##) ##### ####" />
         </LinearLayout>
 
     </LinearLayout>
