--- a/app/src/main/res/layout/model_recycler_contato.xml
+++ b/app/src/main/res/layout/model_recycler_contato.xml
@@ -24,11 +24,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgContato"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="5dp"
             app:srcCompat="@drawable/ic_account_circle_black_24dp" />
 
         <LinearLayout
@@ -41,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp" />
 
             <com.santalu.maskedittext.MaskEditText
@@ -51,6 +52,7 @@
                 android:background="@android:color/transparent"
                 android:focusableInTouchMode="false"
                 android:text="TextView"
+                android:textColor="?attr/actionModeSplitBackground"
                 android:textSize="14sp"
                 app:met_mask="(##) ##### ####" />
         </LinearLayout>
